--- a/ParkingBon/ParkingBonWindow.xaml
+++ b/ParkingBon/ParkingBonWindow.xaml
@@ -2,8 +2,69 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:custom="clr-namespace:ParkingBon"
-        Title="Parking Bon" Height="379" Width="525" Closing="Window_Closing">
+        Title="Parking Bon" Height="379" Width="525" Closing="Window_Closing" BorderBrush="Azure">
+    <Window.CommandBindings>
+        <CommandBinding
+            Command="New" Executed="NewExecuted"></CommandBinding>
+        <CommandBinding
+            Command="Open" Executed="OpenExecuted" ></CommandBinding>
+        <CommandBinding
+            Command="Save" Executed="SaveExecuted"></CommandBinding>
+        <CommandBinding
+            Command="PrintPreview" Executed="SaveExecuted"></CommandBinding>
+        <CommandBinding
+            Command="Close" Executed="CloseExecuted"></CommandBinding>
+    </Window.CommandBindings>
 
+    <DockPanel>
+        <Menu Height="24" Name="MenuBalk" DockPanel.Dock="Top">
+            <MenuItem Name="BonOperaties" Header="Bon Operaties">
+                <MenuItem Name="NieuweBon" Header="Nieuwe Bon"></MenuItem>
+                <MenuItem Name="BonOpenen" Header="Bon openen"></MenuItem>
+                <MenuItem Name="BonOpslaan" Header="Bon opslaan"></MenuItem>
+                <MenuItem Name="BonAfdrukken" Header="Bon afdrukken"></MenuItem>
+                <Separator></Separator>
+                <MenuItem Name="Afsluiten" Header="Afsluiten"></MenuItem>
+            </MenuItem>
+        </Menu>
+        <ToolBarTray Height="65" DockPanel.Dock="Top">
+            <ToolBar Name="ToolBarOperaties" Height="60">
+                <Button Name="ButtonNew" Click="ButtonNew_Click" >
+                    <StackPanel>
+                        <Image Source="images/new.jpg" Width="32" Stretch="Fill"></Image>
+                        <Label>Nieuw</Label>
+                    </StackPanel>
+                </Button>
+                <Button Name="ButtonOpen">
+                    <StackPanel>
+                        <Image Source="images/open.jpg" Width="32" Stretch="Fill"></Image>
+                        <Label>Open</Label>
+                    </StackPanel>
+                </Button>
+                <Button Name="ButtonSave">
+                    <StackPanel>
+                        <Image Source="images/save.jpg" Width="32" Stretch="Fill"></Image>
+                        <Label>Opslaan</Label>
+                    </StackPanel>
+
+                </Button>
+                <Button Name="ButtonPrintPreview">
+                    <StackPanel>
+                        <Image Source="images/print.jpg" Width="32" Stretch="Fill"></Image>
+                        <Label>Afdrukvoorbeeld</Label>
+                    </StackPanel>
+                </Button>
+                <Button Name="ButtonClose">
+                    <StackPanel>
+                        <Image Source="images/close.jpg" Width="32" Stretch="Fill"></Image>
+                        <Label>Afsluiten</Label>
+                    </StackPanel>
+                </Button>
+            </ToolBar>
+        </ToolBarTray>
+        <StatusBar Name="BonStatus" DockPanel.Dock="Bottom" Height="24">
+            <StatusBarItem Name="StatusItem"></StatusBarItem>
+        </StatusBar>
         <Grid Margin="20">
             <Grid.RowDefinitions>
                 <RowDefinition Height="100"></RowDefinition>
@@ -16,7 +77,7 @@
                 <ColumnDefinition Width="250"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <Image Name="logoImage" Source="images\parkingbon.jpg" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Right" Margin="10,0"></Image>
-           <TextBlock Text="1€ per half uur tot 22.00u" FontWeight="Bold"></TextBlock>
+            <TextBlock Text="1€ per half uur tot 22.00u" FontWeight="Bold"></TextBlock>
             <DatePicker Name="DatumBon" Grid.Column="1" ToolTip="datum selectere" SelectedDateFormat="Long" VerticalAlignment="Center" Margin="0,38,50,38"></DatePicker>
             <Label Name="AankomstLabel" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Right" Content="Aankomsttijd:"></Label>
             <Label Name="AankomstLabelTijd" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left" Width="200" HorizontalContentAlignment="Center"></Label>
@@ -29,4 +90,6 @@
             <Label Name="VertrekLabel" Grid.Row="3" Grid.Column="0" HorizontalAlignment="Right" Content="Vertrektijd:"></Label>
             <Label Name="VertrekLabelTijd" Grid.Row="3" Grid.Column="1" HorizontalAlignment="Left" Width="200" HorizontalContentAlignment="Center"></Label>
         </Grid>
+    </DockPanel>
+  
 </Window>
